# trenbot

./: .env.example  .gitignore  DEVELOPMENT_CHECKLIST.md  README.md  open_trial_db.bat  pyproject.toml
research/gate_backtest/: WORK_ITEM_GATE.md  WORK_ITEM_MTF_GATE.md  gate_backtest.py  gate_backtest_mtf.py
research/gate_backtest/analysis/: VERDICT.md  VERDICT_MTF.md  gate_trades.csv  gate_trades_1D.csv  gate_trades_4H.csv
research/paper_trial/: WORK_ITEM_PAPER_TRIAL.md  fidelity_replay.py  paper_step_guarded.py
src/okxtrendbot/: __init__.py  candles.py  cli.py  config.py  indicators.py  models.py  okx_market.py  paper.py  runtime.py  store.py  strategy.py
tests/: test_market_data.py  test_paper_trader.py  test_runtime.py  test_strategy.py
